[gd_scene load_steps=3 format=2]

[ext_resource path="res://SpeechWindow.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]

[node name="SpeechWindow" type="CanvasLayer"]
visible = false
script = ExtResource( 1 )

[node name="Window" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -360.0
rect_min_size = Vector2( 0, 360 )
mouse_filter = 2
theme = ExtResource( 2 )

[node name="Margin" type="MarginContainer" parent="Window"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -400.0
margin_right = 1920.0
rect_min_size = Vector2( 0, 400 )
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 25

[node name="ColorBG" type="ColorRect" parent="Window/Margin"]
margin_left = 50.0
margin_right = 1870.0
margin_bottom = 375.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.498039 )

[node name="MarginC" type="MarginContainer" parent="Window/Margin/ColorBG"]
margin_right = 600.0
margin_bottom = 120.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 25
custom_constants/margin_bottom = 10

[node name="Character" type="RichTextLabel" parent="Window/Margin/ColorBG/MarginC"]
margin_left = 25.0
margin_top = 10.0
margin_right = 590.0
margin_bottom = 110.0
mouse_filter = 2
bbcode_enabled = true
scroll_active = false

[node name="MarginS" type="MarginContainer" parent="Window/Margin/ColorBG"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 25
custom_constants/margin_top = 100
custom_constants/margin_left = 25
custom_constants/margin_bottom = 10

[node name="Speech" type="RichTextLabel" parent="Window/Margin/ColorBG/MarginS"]
margin_left = 25.0
margin_top = 100.0
margin_right = 1795.0
margin_bottom = 365.0
mouse_filter = 2
bbcode_enabled = true
scroll_active = false
